--- a/SelfFileType/SelfFileType.csproj
+++ b/SelfFileType/SelfFileType.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>Z:\Bin\SelfFileType\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,7 +27,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>Z:\Bin\SelfFileType\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -63,6 +63,22 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\FileType.cs" />
     <Compile Include="src\FileTypeManager.cs" />
+    <Compile Include="src\types\FileTypePornhub.cs" />
+    <Compile Include="src\types\FileTypeSmzdm.cs" />
+    <Compile Include="src\types\FileTypeZhihu.cs" />
+    <Compile Include="src\types\FileTypeYouTube.cs" />
+    <Compile Include="src\types\FileTypeDiscord.cs" />
+    <Compile Include="src\types\FileTypeDeviantArt.cs" />
+    <Compile Include="src\types\FileTypeBangumi.cs" />
+    <Compile Include="src\types\FileTypeArtstation.cs" />
+    <Compile Include="src\types\FileTypeSankakucomplex.cs" />
+    <Compile Include="src\types\FileTypeGoogle.cs" />
+    <Compile Include="src\types\FileTypePatreon.cs" />
+    <Compile Include="src\types\FileTypePixiv.cs" />
+    <Compile Include="src\types\FileTypeTwitter.cs" />
+    <Compile Include="src\types\FileTypeGitHub.cs" />
+    <Compile Include="src\types\FileTypeBilibili.cs" />
+    <Compile Include="src\types\FileTypeBaseSite.cs" />
     <Compile Include="src\types\FileTypeSite.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -91,7 +107,64 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="file.ico" />
+    <Content Include="icon\acfun.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\artstation.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\bangumi.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\bilibili.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="icon\browser.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\deviantart.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\discord.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\f95zone.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\github.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\google.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\mega.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\patreon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\pixiv.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\pornhub.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\reddit.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\sankakucomplex.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\smzdm.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\twitter.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\youtube.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\zhihu.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
