--- a/SelfFileType/SelfFileType.csproj
+++ b/SelfFileType/SelfFileType.csproj
@@ -35,7 +35,13 @@
   <PropertyGroup>
     <ApplicationIcon>file.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>SelfFileType.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Neo.Lua, Version=5.3.0.0, Culture=neutral, PublicKeyToken=fdb0cd4fe8a6e3b2, processorArchitecture=MSIL">
+      <HintPath>packages\NeoLua.1.3.14\lib\net45\Neo.Lua.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -63,6 +69,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\FileType.cs" />
+    <Compile Include="src\FileTypeCustomLua.cs" />
+    <Compile Include="src\FileTypeCustom.cs" />
     <Compile Include="src\FileTypeManager.cs" />
     <Compile Include="src\types\FileTypeTaoBao.cs" />
     <Compile Include="src\types\FileTypeSteam.cs" />
@@ -81,8 +89,8 @@
     <Compile Include="src\types\FileTypeTwitter.cs" />
     <Compile Include="src\types\FileTypeGitHub.cs" />
     <Compile Include="src\types\FileTypeBilibili.cs" />
-    <Compile Include="src\types\FileTypeBaseSite.cs" />
-    <Compile Include="src\types\FileTypeSite.cs" />
+    <Compile Include="src\FileTypeBaseSite.cs" />
+    <Compile Include="src\FileTypeSite.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -94,7 +102,12 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <Content Include="custom\docker.lua">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -129,6 +142,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="icon\discord.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="icon\docker.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="icon\f95zone.ico">
@@ -176,6 +192,8 @@
     <Content Include="icon\zhihu.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\icon_not_found_2.png" />
+    <None Include="Resources\icon_not_found.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
