--- a/SelfFileTypeTests/SelfFileTypeTests.csproj
+++ b/SelfFileTypeTests/SelfFileTypeTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\FileTypeCustomLuaTests.cs" />
     <Compile Include="src\types\FileTypeArtstationTests.cs" />
     <Compile Include="src\types\FileTypeBilibiliTests.cs" />
     <Compile Include="src\types\FileTypeDeviantArtTests.cs" />
