--- a/SelfFileType/packages.config
+++ b/SelfFileType/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net452" />
-  <package id="NeoLua" version="1.3.14" targetFramework="net452" />
+  <package id="KeraLua" version="1.3.2" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net462" />
+  <package id="NLua" version="1.6.2" targetFramework="net462" />
 </packages>
